@@ -8,6 +8,11 @@
 	Window matched by this can't be deleted by the `delete-window-safely'
 	function, only by `delete-window' (which equals to `xkill').
 
+	* lisp/sawfish/wm/ext/match-window.jl
+	* lisp/sawfish/wm/commands/move-resize.jl: added `fixed-size' window-matcher.
+	Window matched by this can't be resized by the `resize-window-interactively',
+	`halve-window-size' or `double-window-size' functions, but by maximize-*.
+
 2010-09-16  Teika kazura <teika@lavabit.com>
 	* lisp/sawfish/wm/commands/grow-pack.jl
 	* lisp/sawfish/wm/ext/window-history.jl
